--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,12 @@
     <string name="app_name">Alkcool</string>
     <string name="tab_text_1">Spieler</string>
     <string name="tab_text_2">Getränke</string>
-    <string name="tab_text_3">Ranking</string>
+    <string name="tab_text_3">Speisen</string>
+    <string name="tab_text_4">Ranking</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_add_drink">Alkcool</string>
+    <string name="title_activity_add_meal">Alkcool</string>
 </resources>
